--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         <activity android:name=".activity.NoticeBoardActivity" />
@@ -24,6 +28,8 @@
         <activity android:name=".activity.DialogActivity" />
         <activity android:name=".activity.TabActivity" />
         <activity android:name=".activity.MultiAdapterActivity" />
+        <activity android:name=".activity.RoundTextViewActivity" />
+        <activity android:name=".activity.TipDialogActivity" />
     </application>
 
 </manifest>
